# attempt-at-3d

./: .gitignore  README.md
AttemptAt3DProject/: CMakeLists.txt
AttemptAt3DProject/libs/AttemptAt3D/: CMakeConfig.h.in  CMakeLists.txt
AttemptAt3DProject/libs/AttemptAt3D/_templates/: Class.cpp  Class.h  Class.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/: Head.h  Head.hpp  WorldState.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(BodyManager)/: BodyManager.hpp  BodyReference.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(BodyManager)/_BodyManager/: Body.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Debug)/: Debug.hpp  Debug_logging.hpp  _logging.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(DrawObj)/: DrawObj.hpp  OLD_BodyManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Drawing)/: Mesh.hpp  MeshData.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Drawing)/(Meshes)/: Mesh.hpp  MeshManager.hpp  MeshSample.hpp  MeshVertAttribs.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Drawing)/(Shaders)/: ShaderProgram.hpp  ShaderProgramManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Drawing)/MeshSamples/: Cube.hpp  MeshSample.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Form)/: Form.hpp  PhysicForm.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Form)/Forms/: Camera.hpp  Sun.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(InputManager)/: InputManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Math)/: Math.hpp  _constants.hpp  _functions.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Mesh)/: Mesh.hpp  MeshManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Mesh)/MeshSamples/: Cube.hpp  InvertedPyramid.hpp  MeshSample.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(PtrForGlfw)/: PtrForGlfw.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(ShaderManager)/: ShaderManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Tran)/: Quat.hpp  Tran.hpp  Vec.hpp  Vec3.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Trans)/: Trans.hpp  Vec3.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(Util)/(Color)/: Color.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/(headerGroups)/: allMeshSamples.hpp  allShaderPrograms.hpp  glmGroup.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/BodyManager/: Body.h  Body.hpp  BodyManager.h  BodyManager.hpp  BodyReference.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/Debug/: Debug.h  Debug.hpp  Debug_logging.h
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/FileLoader/: FileLoader.h
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/FileLoading/: FileLoading.h  FileLoading.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/ShaderManager/: ShaderManager.h  ShaderManager.hpp
AttemptAt3DProject/libs/AttemptAt3D/include/AttemptAt3D/WindowHandling/: Window.h
AttemptAt3DProject/libs/AttemptAt3D/res/shaders/: fragmentShaderSource.glsl  geometryShaderSource.glsl  vertexShaderSource.glsl
AttemptAt3DProject/libs/AttemptAt3D/res/shaders/Flat/: fragment.glsl  geometry.glsl  vertex.glsl
AttemptAt3DProject/libs/AttemptAt3D/res/shaders/Smooth/: fragment.glsl  geometry.glsl  vertex.glsl
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/: Head.cpp  OLD_Program.cpp  Program.cpp  WorldState.cpp  main.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(BodyManager)/: BodyManager.cpp  BodyReference.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Debug)/: Debug_logging.cpp  _logging.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(DrawObj)/: DrawObj.cpp  OLD_BodyManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Drawing)/: Mesh.cpp  MeshData.cpp  MeshManager.cpp  ShaderManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(FileLoading)/: FileLoading.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Form)/: Form.cpp  PhysicForm.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(InputManager)/: InputManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Mesh)/: Mesh.cpp  MeshManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(PtrForGlfw)/: PtrForGlfw.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(ShaderManager)/: ShaderManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Tran)/: OLD_Vec3.cpp  Tran.cpp  Vec.cpp  Vec3.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/(Trans)/: Trans.cpp  Vec3.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/BodyManager/: Body.cpp  BodyManager.cpp  BodyReference.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/Debug/: Debug_logging.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/FileLoader/: FileLoader.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/FileLoading/: FileLoading.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/ShaderManager/: ShaderManager.cpp
AttemptAt3DProject/libs/AttemptAt3D/src/AttemptAt3D/WindowHandling/: Window.cpp
scripts/: build.bat  (+5 more)
(+54 files in other folders)
